[gd_scene load_steps=4 format=3 uid="uid://cfvc3j5m167ii"]

[ext_resource type="Texture2D" uid="uid://wtmwtolt1ssb" path="res://background/mainmenu.png" id="1_06t4h"]
[ext_resource type="Script" uid="uid://ueg16d5fxu5b" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="Script" uid="uid://4vl5cryx1b1n" path="res://v_box_container.gd" id="2_7vrkn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_06t4h")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("2_7vrkn")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Начать игру"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Настройки"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Выйти
"

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="VBoxContainer" method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="VBoxContainer" method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer" method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer" method="_on_QuitButton_pressed"]
